fix dark mode

--- a/src/less/properties/ds6/progress-spinner-properties.less
+++ b/src/less/properties/ds6/progress-spinner-properties.less
@@ -1,1 +1,14 @@
 @import "../../variables/ds6/progress-spinner-variables.less";
+
+// Dark-mode (DS6 only)
+@media (prefers-color-scheme: dark) {
+    .skin-experiment-dark-mode {
+        .progress-spinner {
+            --progress-spinner-image-url: @progress-spinner-image-url-dark-mode;
+        }
+
+        .progress-spinner--large {
+            --progress-spinner-large-image-url: @progress-spinner-large-image-url-dark-mode;
+        }
+    }
+}
